# overworld-test

./: .gitignore  Cargo.toml
assets/chunkdata/0,1/: data.ron
assets/chunkdata/0,2/: data.ron
assets/mapdata/0,0/: data.ron
common/: Cargo.toml
common/src/: constants.rs  lib.rs
common/src/chunkdata/: loader.rs  mod.rs
common/src/components/: chunkdata.rs  mapdata.rs  mod.rs
common/src/loaders/: chunkdata_loader.rs  common.rs  mapdata_loader.rs  mod.rs
editor/: Cargo.toml
editor/src/: main.rs
game/: Cargo.toml
game/.cargo/: config.toml
game/src/: constants.rs  main.rs
game/src/assets/: chunkdata.rs  mod.rs
game/src/components/: chunk.rs
game/src/systems/: chunkstuff.rs  debug.rs  gui.rs  startup.rs
src/: constants.rs  consts.rs  main.rs
src/assets/: chunkdata.rs
src/components/: chunk.rs
src/systems/: chunkstuff.rs  debug.rs  gui.rs  mod.rs  player.rs  startup.rs
