[package]
name = "overworld-test"
version = "0.1.0"
edition = "2021"

# Optimizations
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.16.0", features = ["dynamic_linking"] }
bevy_panorbit_camera = "0.26.0"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
